# News-Digest-Agent

./: README.md
backend/: pyproject.toml
backend/src/: main.py
backend/src/agents/: research_agent.py  writer_agent.py
backend/src/tools/: fetcher.py  filter.py  search.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
